# DroneProject

./: .gitignore  README.md  pyproject.toml
detectors/: base.py  factory.py
detectors/edge_geometry/: __init__.py  detector.py  plan.md
detectors/segmentation/: __init__.py  dataset.py  detector.py  model.py  plan.md  train.py
detectors/threshold_morph/: __init__.py  detector.py  plan.md
evaluation/: README.md
tests/: test_detectors.py
track_detection/: __init__.py  cli.py  geometry.py  io.py  pipeline.py  preprocessing.py  types.py  video.py
